# gz_sim

gz-waves-models/models/Boat/: model.config  model.sdf
gz-waves-models/models/Boat/meshes/: boat.dae  boat.stl  mesh.stl
gz-waves-models/models/wam-v/: model.sdf
gz-waves-models/world_models/waves/: model.sdf
gz-waves-models/worlds/: waves copy 2.sdf  waves copy.sdf  waves.sdf
gz-waves/log/: latest_build  latest_test  latest_test-result
gz-waves/src/systems/: CMakeLists.txt
gz-waves/src/systems/waves/: CMakeLists.txt  ThrustController.cc  ThrustController.hh
listener/: CMakeLists.txt  listener.cc  plot_data.py  run.sh  simulation_log.txt  thrust.cc
